# serializer version: 1
# name: test_data_draw
  '''
  Falsifying example: inner(
      data=DataObject(draws=[
          0,
          '',
      ]),
  )
  '''
# ---
# name: test_sampled_from_enum_flag
  '''
  Falsifying example: inner(
      c=test_sampled_from_enum_flag.<locals>.Color.RED,
  )
  '''
# ---
# name: test_sampled_from_module_level_enum_flag
  '''
  Falsifying example: inner(
      d=Direction.NORTH,
  )
  '''
# ---
